force-app/main/default/objects/SCAR__c/SCAR__c.object-meta.xml
<CustomObject>
    <label>SCAR</label>
    <nameField>
        <displayFormat>SCAR-{0000}</displayFormat>
        <label>SCAR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCAR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>