force-app/main/default/objects/SCAR__c/fields/Affected_Document_1__c.field-meta.xml
<CustomField>
    <fullName>Affected_Document_1__c</fullName>
    <label>Affected Document 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Affected_Documents</valueSetName>
    </valueSet>
</CustomField>