force-app/main/default/objects/SCAR__c/fields/Affected_Document_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Affected_Document_1_Date__c</fullName>
    <label>Affected Document 1 - Date</label>
    <type>Date</type>
</CustomField>