force-app/main/default/objects/SCAR__c/fields/Affected_Document_1_Owners_to_Update__c.field-meta.xml
<CustomField>
    <fullName>Affected_Document_1_Owners_to_Update__c</fullName>
    <label>Affected Document 1 - Owners to Update</label>
    <length>120</length>
    <type>Text</type>
</CustomField>