force-app/main/default/objects/SCAR__c/fields/Affected_Sites__c.field-meta.xml
<CustomField>
    <fullName>Affected_Sites__c</fullName>
    <inlineHelpText>Identify the potential for shut down, line interruptions, yard recalls, warranty, etc..</inlineHelpText>
    <label>Affected Sites</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>