force-app/main/default/objects/SCAR__c/fields/Build_Date_for_Certified_Marterial__c.field-meta.xml
<CustomField>
    <fullName>Build_Date_for_Certified_Marterial__c</fullName>
    <description>Build Date for Certified Marterial (Clean Point )</description>
    <label>Build Date for Certified Material</label>
    <type>Date</type>
</CustomField>