force-app/main/default/objects/SCAR__c/fields/Case_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Email__c</fullName>
    <formula>Case__r.Owner:User.Email</formula>
    <label>Case Owner Email</label>
    <type>Text</type>
</CustomField>