force-app/main/default/objects/SCAR__c/fields/Case_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Name__c</fullName>
    <formula>Case__r.Owner:User.FirstName  &amp; &#39; &#39; &amp; Case__r.Owner:User.LastName</formula>
    <label>Case Owner Name</label>
    <type>Text</type>
</CustomField>