force-app/main/default/objects/SCAR__c/fields/Closure_Statement_Validation__c.field-meta.xml
<CustomField>
    <fullName>Closure_Statement_Validation__c</fullName>
    <label>Closure Statement (Validation)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>