force-app/main/default/objects/SCAR__c/fields/Corrective_Action_for_Why_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_for_Why_Shipped__c</fullName>
    <label>Corrective Action for Why Shipped</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>