force-app/main/default/objects/SCAR__c/fields/Corrective_Action_Owner_s_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_Owner_s_Phone_Number__c</fullName>
    <label>Corrective Action Owner&#39;s Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>