force-app/main/default/objects/SCAR__c/fields/Date_Issue_Occurred__c.field-meta.xml
<CustomField>
    <fullName>Date_Issue_Occurred__c</fullName>
    <formula>Case__r.CreatedDate</formula>
    <label>Date Issue Occurred</label>
    <type>Date</type>
</CustomField>