force-app/main/default/objects/SCAR__c/fields/Date_Supplier_Notified_of_Appr_Reject__c.field-meta.xml
<CustomField>
    <fullName>Date_Supplier_Notified_of_Appr_Reject__c</fullName>
    <label>Date Supplier Notified of Appr/Reject</label>
    <type>Date</type>
</CustomField>