force-app/main/default/objects/SCAR__c/fields/How_Made_and_How_Verified__c.field-meta.xml
<CustomField>
    <fullName>How_Made_and_How_Verified__c</fullName>
    <label>How Made and How Verified</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>