force-app/main/default/objects/SCAR__c/fields/How_this_issues_be_avoided_in_the_future__c.field-meta.xml
<CustomField>
    <fullName>How_this_issues_be_avoided_in_the_future__c</fullName>
    <label>How this issues be avoided in the future</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>