force-app/main/default/objects/SCAR__c/fields/How_will_new_parts_be_identified__c.field-meta.xml
<CustomField>
    <fullName>How_will_new_parts_be_identified__c</fullName>
    <label>How will new parts be identified</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>