force-app/main/default/objects/SCAR__c/fields/Is_Last_5_Sections_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_5_Sections_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Last 5 Sections Email Sent?</label>
    <type>Checkbox</type>
</CustomField>