force-app/main/default/objects/SCAR__c/fields/Last_Notified_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Last_Notified_Vendor__c</fullName>
    <label>Last Notified Vendor</label>
    <type>Date</type>
</CustomField>