force-app/main/default/objects/SCAR__c/fields/LIXIL_SCAR__c.field-meta.xml
<CustomField>
    <fullName>LIXIL_SCAR__c</fullName>
    <formula>Case__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LIXIL SCAR #</label>
    <type>Text</type>
</CustomField>