force-app/main/default/objects/SCAR__c/fields/Lixil_Supplier_Quality_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Lixil_Supplier_Quality_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lixil Supplier Quality Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SCAR</relationshipName>
    <type>Lookup</type>
</CustomField>