force-app/main/default/objects/SCAR__c/fields/Lixil_Supplier_Quality_Engineer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Lixil_Supplier_Quality_Engineer_Comments__c</fullName>
    <label>Lixil Supplier Quality Engineer Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>