force-app/main/default/objects/SCAR__c/fields/Lixil_Supplier_Quality_Engineer_Name__c.field-meta.xml
<CustomField>
    <fullName>Lixil_Supplier_Quality_Engineer_Name__c</fullName>
    <formula>Lixil_Supplier_Quality_Engineer__r.FirstName +&#39; &#39;+ Lixil_Supplier_Quality_Engineer__r.LastName</formula>
    <label>Lixil Supplier Quality Engineer Name</label>
    <type>Text</type>
</CustomField>