force-app/main/default/objects/SCAR__c/fields/Lixil_Supplier_Quality_Phone__c.field-meta.xml
<CustomField>
    <fullName>Lixil_Supplier_Quality_Phone__c</fullName>
    <formula>Lixil_Supplier_Quality_Engineer__r.Phone</formula>
    <label>Lixil Supplier Quality Phone</label>
    <type>Text</type>
</CustomField>