force-app/main/default/objects/SCAR__c/fields/Lot_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Lot_Quantity__c</fullName>
    <label>Lot Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>