force-app/main/default/objects/SCAR__c/fields/Other_Facilities_or_Platform_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>Other_Facilities_or_Platform_at_Risk__c</fullName>
    <description>Other Facilities or Platform at Risk - Name</description>
    <label>Other Facilities or Platform at Risk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>