force-app/main/default/objects/SCAR__c/fields/Other_Facilities_Platform_at_Risk_DueDt__c.field-meta.xml
<CustomField>
    <fullName>Other_Facilities_Platform_at_Risk_DueDt__c</fullName>
    <label>Other Facilities/Platform at Risk-DueDt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>