force-app/main/default/objects/SCAR__c/fields/Other_Production_Platform_Risk__c.field-meta.xml
<CustomField>
    <fullName>Other_Production_Platform_Risk__c</fullName>
    <inlineHelpText>Other Product/Platform at Risk ?</inlineHelpText>
    <label>Other Production/Platform Risk</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>