force-app/main/default/objects/SCAR__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <externalId>true</externalId>
    <label>Part Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>