force-app/main/default/objects/SCAR__c/fields/Plat_Location_Issue_found_at__c.field-meta.xml
<CustomField>
    <fullName>Plat_Location_Issue_found_at__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant/Location Issue found at</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SCAR (Plat/Location Issue found at)</relationshipLabel>
    <relationshipName>IssueLocations</relationshipName>
    <type>Lookup</type>
</CustomField>