force-app/main/default/objects/SCAR__c/fields/Problem_Description__c.field-meta.xml
<CustomField>
    <fullName>Problem_Description__c</fullName>
    <inlineHelpText>Describe issue in terms of what, where, when and how many</inlineHelpText>
    <label>Problem Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>