force-app/main/default/objects/SCAR__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <formula>Product_Name__r.Name</formula>
    <label>ProductName</label>
    <type>Text</type>
</CustomField>