force-app/main/default/objects/SCAR__c/fields/Rejection_Rate_or_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Rate_or_Quantity__c</fullName>
    <label>Rejection Rate or Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>