force-app/main/default/objects/SCAR__c/fields/Review_Results__c.field-meta.xml
<CustomField>
    <fullName>Review_Results__c</fullName>
    <label>Review Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>