force-app/main/default/objects/SCAR__c/fields/Sample_Size_AQL_Level__c.field-meta.xml
<CustomField>
    <fullName>Sample_Size_AQL_Level__c</fullName>
    <label>Sample Size/AQL Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>