force-app/main/default/objects/SCAR__c/fields/SCAR_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>SCAR_Issue_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>SCAR Issue Date</label>
    <type>Date</type>
</CustomField>