force-app/main/default/objects/SCAR__c/fields/SCAR_Team_Count__c.field-meta.xml
<CustomField>
    <fullName>SCAR_Team_Count__c</fullName>
    <label>SCAR Team Count</label>
    <summaryFilterItems>
        <field>SCAR_Team__c.Contact_Role__c</field>
        <operation>equals</operation>
        <value>Team Member</value>
    </summaryFilterItems>
    <summaryForeignKey>SCAR_Team__c.SCAR_Form__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>