force-app/main/default/objects/SCAR__c/fields/SCAR_Type__c.field-meta.xml
<CustomField>
    <fullName>SCAR_Type__c</fullName>
    <label>SCAR Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full SCAR</fullName>
            </value>
            <value>
                <fullName>Notification Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>