force-app/main/default/objects/SCAR__c/fields/Send_10_Days_Reminder_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_10_Days_Reminder_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send 10 Days Reminder Email</label>
    <type>Checkbox</type>
</CustomField>