force-app/main/default/objects/SCAR__c/fields/Send_48_Hours_Reminder_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_48_Hours_Reminder_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send 48 Hours Reminder Email</label>
    <type>Checkbox</type>
</CustomField>