force-app/main/default/objects/SCAR__c/fields/Send_Notification_to_Owner__c.field-meta.xml
<CustomField>
    <fullName>Send_Notification_to_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Notification to Owner</label>
    <type>Checkbox</type>
</CustomField>