force-app/main/default/objects/SCAR__c/fields/Supplier_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SCAR</relationshipLabel>
    <relationshipName>SCAR</relationshipName>
    <type>Lookup</type>
</CustomField>