force-app/main/default/objects/SCAR__c/fields/Supplier_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact_Email__c</fullName>
    <formula>Supplier_Contact__r.Email</formula>
    <label>Supplier Contact Email</label>
    <type>Text</type>
</CustomField>