force-app/main/default/objects/SCAR__c/fields/Supplier_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Contact_Phone__c</fullName>
    <formula>Supplier_Contact__r.Phone</formula>
    <label>Supplier Contact Phone</label>
    <type>Text</type>
</CustomField>