force-app/main/default/objects/SCAR__c/fields/Supplier_Location__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Location__c</fullName>
    <description>Address of the associated supplier account</description>
    <label>Supplier Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>