force-app/main/default/objects/SCAR__c/fields/Supplier_Soring_Results__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Soring_Results__c</fullName>
    <inlineHelpText>Sorting Results (Time, Date, Total Number Sorted and Quantity Rejected)</inlineHelpText>
    <label>Supplier Sorting Results</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>