force-app/main/default/objects/SCAR__c/fields/Vendor_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Shipping_Address__c</fullName>
    <formula>Supplier_Name__r.ShippingStreet  &amp; &#39; &#39; &amp; Supplier_Name__r.ShippingCity &amp; &#39;,&#39; &amp;  Supplier_Name__r.ShippingState &amp; &#39; &#39; &amp;  Supplier_Name__r.ShippingPostalCode &amp; &#39; &#39; &amp;  Supplier_Name__r.ShippingCountry</formula>
    <label>Supplier Location</label>
    <type>Text</type>
</CustomField>