force-app/main/default/objects/SCAR__c/fields/Verification_of_Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>Verification_of_Corrective_Action__c</fullName>
    <inlineHelpText>Has the issue been turned on and off?  How?  Verification through statistical evidence / hypothesis testing. Verification of corrective action for each why made and why shipped is required.</inlineHelpText>
    <label>Verification of Corrective Action</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>