force-app/main/default/objects/SCAR__c/fields/What_actions_were_taken_to_Immediately__c.field-meta.xml
<CustomField>
    <fullName>What_actions_were_taken_to_Immediately__c</fullName>
    <inlineHelpText>What actions were taken to immediately protect the customer and contain any suspect inventory?</inlineHelpText>
    <label>What actions were taken to Immediately</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>