force-app/main/default/objects/SCAR__c/fields/Why_Shipped_and_How_Verified__c.field-meta.xml
<CustomField>
    <fullName>Why_Shipped_and_How_Verified__c</fullName>
    <label>Why Shipped and How Verified</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>