force-app/main/default/objects/SCAR__c/fields/X3D_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>X3D_Due_Date__c</fullName>
    <label>3D Due Date</label>
    <type>Date</type>
</CustomField>