force-app/main/default/objects/SCAR__c/fields/X8D_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>X8D_Due_Date__c</fullName>
    <label>8D Due Date</label>
    <type>Date</type>
</CustomField>